2005-06-22  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf-i18n.h: Use glib-i18n.h

2005-06-20  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.7.0 ===

2005-06-15  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf.symbols:
	* gdk-pixbuf-simple-anim.h: Add 
	gdk_pixbuf_simple_anim_iter_get_type()

2005-06-08  Matthias Clasen  <mclasen@redhat.com>

	* io-pnm.c (pnm_read_next_value): Check for overflow.
	(#306394, Morten Welinder)

2005-05-27  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c: Accept the 108 byte header of BMP v4.  (#168799)

2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* gdk-pixbuf.symbols: 
	* gdk-pixbuf-simple-anim.[hc]: No need to expose the iter
	subclass at all in the headers.

	* Makefile.am: Add new files. 

	* gdk-pixbuf.symbols: Add new api.

	* gdk-pixbuf.h: Include gdk-pixbuf-simple-anim.h here.

	* gdk-pixbuf-simple-anim.[hc]: Add a way to construct
	simple animations out of pixbufs.  (#135161, Dom Lachowicz)

2005-05-24  Sven Neumann  <sven@gimp.org>

	* io-png.c: allow to specify the PNG compression level by passing
	a "compression" parameter to the PNG save function (bug #305337).

	* gdk-pixbuf-io.c (gdk_pixbuf_save): document the new parameter.

2005-04-09  Matthias Clasen  <mclasen@redhat.com>
	
	* Makefile.am: Use $(NM), not nm directly. (#301299, 
	Nguyen Thai Ngoc Duy)

	* io-bmp.c (gdk_pixbuf__bmp_image_save_to_callback): 
	Don't overflow the stack.  (Jakub Jelinek, Arjan van de Ven)

2005-04-08  Matthias Clasen  <mclasen@redhat.com>

	* io-pcx.c: No debugging output, please. (#173107,
	John Ellis)

2005-04-07  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c (DecodeColormap): Initialize the colormap to 
	zero.  (#171762, David Costanzo)

2005-03-30  Matthias Clasen  <mclasen@redhat.com>

	* io-bmp.c: Avoid bus errors due to unaligned access. (#168173,
	Morten Welinder, Ivan Wong)

2005-03-29  Matthias Clasen  <mclasen@redhat.com>

	* io-tga.c (parse_rle_data): Fix the update areas for incremental